Added check for "CONFIG_NETFILTER_XT_MATCH_MAC" kernel-option. Small layout-changes for "About", "NoRoot" and "NoNetfilter".

--- a/res/layout/aboutview.xml
+++ b/res/layout/aboutview.xml
@@ -16,13 +16,15 @@
 				android:layout_height="wrap_content"
 				android:paddingTop="15px"
 				android:paddingLeft="15px"
+				android:paddingRight="15px"
 				android:textStyle="bold"
 				android:textColor="#ffffff" />
 			<TextView android:text="- Unkown -"
 				android:id="@+id/versionName"
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"
-				android:paddingLeft="15px"		
+				android:paddingLeft="15px"	
+				android:paddingRight="15px"	
 				android:layout_gravity="center_vertical"
 				android:textColor="#ffffff" />	
 			<TextView android:text="Project-Home: "
@@ -30,6 +32,7 @@
 				android:layout_height="wrap_content"		
 				android:paddingTop="15px"
 				android:paddingLeft="15px"
+				android:paddingRight="15px"
 				android:textStyle="bold"
 				android:textColor="#ffffff" />
 			<TextView android:text="http://android-wifi-tether.googlecode.com"
@@ -38,6 +41,7 @@
 				android:autoLink="web"
 				android:textColorLink="#ffffff"
 				android:paddingLeft="15px"
+				android:paddingRight="15px"
 				android:textSize="12sp"					
 				android:textColor="#ffffff" />
 			<TextView android:text="License: "
@@ -45,12 +49,14 @@
 				android:layout_height="wrap_content"
 				android:paddingTop="15px"
 				android:paddingLeft="15px"
+				android:paddingRight="15px"
 				android:textStyle="bold"
 				android:textColor="#ffffff" />	
 			<TextView android:text="GNU General Public License v3"
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"
-				android:paddingLeft="15px"								
+				android:paddingLeft="15px"
+				android:paddingRight="15px"								
 				android:textColor="#ffffff" />	
 			<TextView android:text="http://www.gnu.org/licenses/gpl.html"
 				android:layout_width="fill_parent" 
@@ -58,6 +64,7 @@
 				android:autoLink="web"
 				android:textColorLink="#ffffff"
 				android:paddingLeft="15px"
+				android:paddingRight="15px"
 				android:textSize="12sp"					
 				android:textColor="#ffffff" />				
 			<TextView android:text="Authors: "
@@ -65,30 +72,35 @@
 				android:layout_height="wrap_content"		
 				android:paddingTop="15px"
 				android:paddingLeft="15px"
+				android:paddingRight="15px"
 				android:textStyle="bold"
 				android:textColor="#ffffff" />	
 			<TextView android:text="Harald Müller, Seth Lemons, Ben Buxton"
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"
-				android:paddingLeft="15px"								
+				android:paddingLeft="15px"
+				android:paddingRight="15px"								
 				android:textColor="#ffffff" />
 			<TextView android:text="Contributors: "
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"		
 				android:paddingTop="15px"
 				android:paddingLeft="15px"
+				android:paddingRight="15px"
 				android:textStyle="bold"
 				android:textColor="#ffffff" />	
 			<TextView android:text="parrothd, zodiac, capnbry, webacoustics"
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"
-				android:paddingLeft="15px"								
+				android:paddingLeft="15px"
+				android:paddingRight="15px"								
 				android:textColor="#ffffff" />
 			<TextView android:text="3rd-Party-Software: "
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"		
 				android:paddingTop="15px"
 				android:paddingLeft="15px"
+				android:paddingRight="15px"
 				android:textStyle="bold"
 				android:textColor="#ffffff" />	
 			<TextView android:text="http://www.iptables.org"
@@ -97,6 +109,7 @@
 				android:autoLink="web"
 				android:textColorLink="#ffffff"
 				android:paddingLeft="15px"
+				android:paddingRight="15px"
 				android:textSize="12sp"					
 				android:textColor="#ffffff" />				
 			<TextView android:text="http://thekelleys.org.uk/dnsmasq/doc.html"
@@ -105,6 +118,7 @@
 				android:autoLink="web"
 				android:textColorLink="#ffffff"
 				android:paddingLeft="15px"
+				android:paddingRight="15px"
 				android:textSize="12sp"					
 				android:textColor="#ffffff" />	
 			<TextView android:text="http://www.bluez.org"
@@ -113,6 +127,7 @@
 				android:autoLink="web"
 				android:textColorLink="#ffffff"
 				android:paddingLeft="15px"
+				android:paddingRight="15px"
 				android:textSize="12sp"					
 				android:textColor="#ffffff" />					
 			</LinearLayout>
