--- a/res/layout/accesscontrolview.xml
+++ b/res/layout/accesscontrolview.xml
@@ -23,10 +23,11 @@
 		<ToggleButton android:id="@+id/buttonAC"
 		    android:layout_width="80px"
 		    android:layout_height="fill_parent"
-			android:layout_marginRight="0px"
-			android:layout_marginTop="4px"
+			android:layout_marginRight="2dp"
+			android:layout_marginTop="4dp"
 			android:layout_alignParentTop="true"
 			android:layout_alignParentRight="true"
+			android:textSize="10sp"
 			android:textOn="Disable" 
 			android:textOff="Enable" />			    
 	</RelativeLayout>
