--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,25 +9,36 @@
 		android:layout_height="40dp"
 		android:layout_gravity="center_horizontal"
 		android:background="#A0909090">
+		
+		<RelativeLayout android:id="@+id/layoutBatteryTemp"
+			android:background="@drawable/battery"
+			android:layout_width="wrap_content"
+			android:layout_height="25dp"
+			android:layout_marginTop="10px"
+			android:layout_marginLeft="10px"
+			android:gravity="center"			
+			android:layout_gravity="center_horizontal"
+			android:layout_alignParentLeft="true"
+			android:layout_alignParentTop="true">
+			<TextView  
+				android:id="@+id/batteryTempText"
+			    android:layout_width="wrap_content" 
+			    android:layout_height="wrap_content" 
+			    android:paddingRight="5px"
+			    android:text="N/A"
+			    android:textStyle="bold"
+			    android:textSize="12sp"
+				android:textColor="#000000"
+			    />			
+		</RelativeLayout>
         <ImageView android:id="@+id/radioModeImage"
  		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 			android:layout_marginTop="10px"
 			android:layout_marginRight="10px"
 			android:gravity="center"
-			android:layout_toRightOf="@+id/radioModeLabel"
 			android:layout_alignParentRight="true"
 			android:layout_alignParentTop="true"/>
-		<TextView android:id="@+id/radioModeText"
- 		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"           
-            android:text=""
-			android:layout_marginTop="10px"
-			android:layout_marginRight="10px"
-			android:gravity="right"
-			android:textStyle="bold"
-			android:layout_toLeftOf="@+id/radioModeImage"
-            android:textColor="#ffffff" />
 	</RelativeLayout>
     <RelativeLayout android:id="@+id/layoutDownloadUpdate"
 		android:layout_width="fill_parent"
@@ -87,8 +98,8 @@
 					<TableRow>
 						<ImageView android:id="@+id/startTetherBtn"
 							android:src="@drawable/start" 
- 		    				android:layout_width="110dp"
-		    				android:layout_height="120dp"
+ 		    				android:layout_width="180dp"
+		    				android:layout_height="135dp"
 							android:layout_gravity="center_horizontal" />
 					</TableRow>
 					<TableRow>
@@ -109,8 +120,8 @@
 					<TableRow>
 						<ImageView android:id="@+id/stopTetherBtn"
 							android:src="@drawable/stop" 
- 		    				android:layout_width="110dp"
-		    				android:layout_height="120dp"
+ 		    				android:layout_width="180dp"
+		    				android:layout_height="135dp"
 							android:layout_gravity="center_horizontal" />			
 					</TableRow>
 					<TableRow>
