--- a/res/layout/setupview.xml
+++ b/res/layout/setupview.xml
@@ -23,7 +23,7 @@
 	    <CheckBoxPreference  
 			android:key="encpref"  
 			android:title="Enable WiFi-Encryption"  
-			android:summary="Turn on wifi-encrytion (WEP 128-bit)" /> 	
+			android:summary="Turn on wifi-encrytion" /> 	
 		<ListPreference  
 			android:key="encsetuppref"  
 			android:title="Encryption setup method"  
@@ -38,8 +38,6 @@
 			android:title="Change Passphrase"  
 			android:summary="Change Passphrase for WiFi-Encryption" 
 			android:dialogTitle="Enter Passphrase" 
-			android:dialogMessage="WEP-key must be 13 characters (ASCII) long!"
-			android:maxLength="13" 
 			android:defaultValue="abcdefghijklm"
 			android:dependency="encpref"
 		/> 
