--- a/res/layout/nonetfilterview.xml
+++ b/res/layout/nonetfilterview.xml
@@ -11,7 +11,7 @@
 		    android:orientation="vertical"
 		    android:layout_width="fill_parent"
 		    android:layout_height="fill_parent">
-			<TextView android:text="Sorry, but your kernel does not have all necessary features for running this application."
+			<TextView android:text="@string/nonetfilter_layout_line1"
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"
 				android:paddingTop="15px"
@@ -20,7 +20,7 @@
 				android:textStyle="bold"
 				android:gravity="center_vertical|center_horizontal"
 				android:textColor="#ffffff" />
-			<TextView android:text="Please see our FAQ: http://code.google.com/p/android-wifi-tether/wiki/FAQ"
+			<TextView android:text="@string/nonetfilter_layout_line2"
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content"
 				android:paddingTop="15px"
