--- a/res/layout/accesscontrolview.xml
+++ b/res/layout/accesscontrolview.xml
@@ -34,7 +34,7 @@
 	<TextView android:id="@+id/connectedClientsText"
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
-		android:text="Connected/Authorized Clients:"
+		android:text="@string/accesscontrol_layout_connectedclients"
 		android:layout_marginTop="10px"
 		android:layout_marginBottom="5px"
 		android:layout_marginLeft="10px"
@@ -52,7 +52,7 @@
 		android:layout_gravity="center_horizontal"
 		android:background="#A0909090">
 		<Button android:id="@+id/buttonApplyAC"
-		    android:text="Apply"
+		    android:text="@string/accesscontrol_layout_apply"
 		    android:layout_width="fill_parent"
 		    android:layout_height="fill_parent"
 			android:layout_marginRight="20dp"
