--- a/res/values-de/string.xml
+++ b/res/values-de/string.xml
@@ -74,11 +74,11 @@
 	<string name="setup_layout_battery">Deaktiviere Akku-Temperature</string>
 	<string name="setup_layout_battery_summary">Verstecke Akku-Temperatur Anzeige</string>
 	<string name="about_layout_version">Version:</string>
-	<string name="about_layout_projecthome">Projekt-Homepate:</string>
+	<string name="about_layout_projecthome">Projekt-Homepage:</string>
 	<string name="about_layout_license">Lizenz:</string>
 	<string name="about_layout_authors">Autoren:</string>
 	<string name="about_layout_contributors">Beitragende:</string>
-	<string name="about_layout_software">3rd-Party-Software:</string>
+	<string name="about_layout_software">Sonstige Software:</string>
 	<string name="clientrow_layout_macaddress">MAC-Adresse:</string>
 	<string name="clientrow_layout_name">Name</string>
 	<string name="clientrow_layout_ipaddress">IP-Adresse</string>
