--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -151,7 +151,7 @@
 			android:layout_height="wrap_content"
 			android:layout_alignParentLeft="true"
 			android:textSize="16sp"
-			android:text="Down"
+			android:text="@string/main_layout_download"
 			android:gravity="center_vertical|center_horizontal"
 			android:textStyle="bold" />
 		<TextView
@@ -160,7 +160,7 @@
 			android:layout_width="150dp"
 			android:layout_height="wrap_content"
 			android:layout_alignParentRight="true"
-			android:text="Up"
+			android:text="@string/main_layout_upload"
 			android:textSize="16sp"
 			android:gravity="center_vertical|center_horizontal"
 			android:textStyle="bold" />
