Third UI-update for multi-lingual support.

--- a/res/values-de/string.xml
+++ b/res/values-de/string.xml
@@ -3,11 +3,18 @@
 	<string name="global_application_name">Wireless Tether</string>
 	<string name="global_application_installed">Programm- und Konfigurationsdateien installiert!</string>
 	<string name="global_application_error_restartsecwifi">"Fehler beim Neustart (Sicherheitseinstellungen)!"</string>
+    <string name="global_application_tethering_running">Tethering ist aktiviert ...</string>
+	<string name="global_application_accesscontrol_disabled">Zugriffskontrolle deaktiviert</string>
+	<string name="global_application_accesscontrol_authorized">Authorisiert</string>
+	<string name="global_application_accesscontrol_unauthorized">Nicht Authorisiert</string>    
     <string name="main_activity_settings">Einstellungen</string>
     <string name="main_activity_about">Über</string>
     <string name="main_activity_donate">Spende</string>
     <string name="main_activity_close">Schließen</string>
     <string name="main_activity_notroot">Nicht Root!</string>
+    <string name="main_activity_nonetfilter">Kein Netfilter!</string>
+    <string name="main_activity_noaccesscontrol">Keine Zugriffskontrolle!</string>
+    <string name="main_activity_accesscontrol_disabled">Zugriffskontrolle deaktiviert.</string>    
     <string name="main_activity_exit">Beenden</string>
     <string name="main_activity_ignore">Ignorieren</string>
     <string name="main_activity_yes">Ja</string>
@@ -18,6 +25,11 @@
     <string name="main_activity_accesscontrol">Zugangskontrolle</string>
     <string name="main_activity_start">Starte Tethering</string>
     <string name="main_activity_start_summary">Bitte warten während gestartet wird...</string>
+    <string name="main_activity_start_errors">Beim Start wurden Fehler erkannt! Bitte überprüfe \'Zeige Log\'.</string>
+    <string name="main_activity_start_unable">Es kann nicht gestartet werden. Möglicherweise könnten keine Root-Rechte angefordert werden.</string>
+    <string name="main_activity_start_wiredtethering_running">\'Wired-tethering\' scheint im Moment aktiviert zu sein. Bitte zuvor deaktivieren.</string>
+    <string name="main_activity_start_usbtethering_running"><![CDATA[USB-tethering scheint im Moment aktiviert zu sein. Bitte unter: Settings -> Wireless & network setting -> Internet tethering deaktivieren.]]></string>
+    <string name="main_activity_start_unknownstate">Das Telefon befindet sich in einem unbekannten Status. Ein Neustart des Gerätes sollte dieses Problem beheben!</string>
     <string name="main_activity_stop">Stoppe Tethering</string>
     <string name="main_activity_stop_summary">Bitte warten während gestoppt wird...</string>     
     <string name="log_activity_nologfile">Kann Log-Datei nicht öffnen. Datei existiert nicht!</string>
