--- a/res/values-de/string.xml
+++ b/res/values-de/string.xml
@@ -7,6 +7,7 @@
 	<string name="global_application_accesscontrol_disabled">Zugriffskontrolle deaktiviert</string>
 	<string name="global_application_accesscontrol_authorized">Authorisiert</string>
 	<string name="global_application_accesscontrol_unauthorized">Nicht Authorisiert</string>    
+	<string name="global_application_connected">verbunden</string>
     <string name="main_activity_settings">Einstellungen</string>
     <string name="main_activity_about">Über</string>
     <string name="main_activity_donate">Spende</string>
@@ -31,7 +32,11 @@
     <string name="main_activity_start_usbtethering_running"><![CDATA[USB-tethering scheint im Moment aktiviert zu sein. Bitte unter: Settings -> Wireless & network setting -> Internet tethering deaktivieren.]]></string>
     <string name="main_activity_start_unknownstate">Das Telefon befindet sich in einem unbekannten Status. Ein Neustart des Gerätes sollte dieses Problem beheben!</string>
     <string name="main_activity_stop">Stoppe Tethering</string>
-    <string name="main_activity_stop_summary">Bitte warten während gestoppt wird...</string>     
+    <string name="main_activity_stop_summary">Bitte warten während gestoppt wird...</string>  
+    <string name="main_activity_confirm">Bestätigen</string>
+    <string name="main_activity_cancel">Abbrechen</string>
+    <string name="main_activity_trackball_pressed_start">Trackball wurde gedrückt. Bestätigung für \"Tether-Start\" benötigt.</string>
+    <string name="main_activity_trackball_pressed_stop">Trackball wurde gedrückt. Bestätigung für \"Tether-Stop\" benötigt</string>
     <string name="log_activity_nologfile">Kann Log-Datei nicht öffnen. Datei existiert nicht!</string>
     <string name="main_layout_presstostart">- Drücken um Tethering zu starten. -</string> 
     <string name="main_layout_presstostop">- Drücken um Tethering zu stoppen. -</string> 
@@ -39,8 +44,19 @@
     <string name="main_layout_upload">Upload</string>     
     <string name="accesscontrol_activity_reloadclientlist">Klienten-Liste neu laden</string>
     <string name="accesscontrol_activity_applysettings">Einstellungen übernehmen</string>
+    <string name="accesscontrol_activity_enabled">Zugriffskontrolle aktiviert.</string>
+    <string name="accesscontrol_activity_disabled">Zugriffskontrolle deaktiviert.</string>
+    <string name="accesscontrol_activity_is_enabled">Zugriffskontrolle ist aktiviert.</string>
+    <string name="accesscontrol_activity_is_disabled">Zugriffskontrolle ist deaktiviert.</string>
+    <string name="accesscontrol_activity_error_save_whitelistfile">Kann whitelist-Datei nicht speichern!</string>
+    <string name="accesscontrol_activity_error_remove_whitelistfile">Kann whitelist-Datei nicht löschen!</string>
+    <string name="accesscontrol_activity_error_read_leasefile">Kann lease-Datei nicht lesen!</string>
+    <string name="accesscontrol_activity_config_saved">Konfiguration für die Zugriffskontrolle gespeichert!</string>
+    <string name="accesscontrol_activity_not_connected">- Nicht verbunden -</string>    
     <string name="accesscontrol_layout_connectedclients">Verbundene/Authorisierte Klienten:</string>
 	<string name="accesscontrol_layout_apply">Übernehmen</string>
+	<string name="accesscontrol_layout_enable">Aktivieren</string>
+	<string name="accesscontrol_layout_disable">Deaktivieren</string>	
     <string name="setup_activity_reinstall">Binär- und Konfigurationsdateien neu installieren</string>
 	<string name="setup_layout_category_bluetooth">Bluetooth</string>
 	<string name="setup_layout_category_wifi">Wifi</string>
